@@ -1,4 +1,4 @@
 DIST surl-1.2.tar.bz2 13207 RMD160 12180487993203df67b848eafd5913f543acb346 SHA1 90bcc67893348db0c5521d59b8169ef211e045be SHA256 d614842a4db242575171056d08621f655d6cfc1adb134e8f63ec390ad313829f
-EBUILD surl-1.2.ebuild 399 RMD160 d9b539de7ecffed84cf39374cc80d1edae6b1f68 SHA1 0a430a2c1864c1bc7b2b79f89ae6584211a422b8 SHA256 2c452f0ff88724f1b763148710b72bcdb979d690500d272e4a0235fcf6b24c40
-MISC ChangeLog 890 RMD160 4b05979e496e84567e3e3d78d0ff7de1770192ab SHA1 2fd3ce56c7fb4ff9bd2c58e62dfacd60d50f0203 SHA256 450d1effa2f59afd611460ab0d4b251261b4a4ff0d0f5807d8e4bae59d58dc0e
+EBUILD surl-1.2.ebuild 369 RMD160 2751627ea6b27e3e9d492f1ddd0b8d9451158e5c SHA1 fb1ebc47c27e145772d2a913d71dc649a77fbcda SHA256 8c3c2af6f5ad098aa53689b00566d798c4d5a508e33c9da78b69ad9098749656
+MISC ChangeLog 1007 RMD160 209a75ce1b1ae1ccde2602b68ee190cc5f57006d SHA1 62d0c764c7586c494e65d1b75fef915c0aca704f SHA256 84ba0ac499fedfa496fcbb098722fe8470374bccde0fe6d1af8c90d7deb9d015
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
